Fix overflow

--- a/src/scripts/components/content.scss
+++ b/src/scripts/components/content.scss
@@ -11,6 +11,5 @@
 
   .h5p-tabs-tab-content {
     background-color: $color-background;
-    overflow: auto;
   }
 }
